Se cambiar piedro papel o tijera por pokemonworld

--- a/piedra-papel-tijera/index.html
+++ b/piedra-papel-tijera/index.html
@@ -11,11 +11,20 @@
 <body>
 
 
-    <h1 id="titulo">Bienvenidos a Piedra Papel o Tijeras!</h1>
+    <h1 id="titulo">Bienvenidos al mundo <span class="pokemon">Pokemon!</span></h1>
 
-    <img src="imagen.png" alt="imagen de piedra papel o tijeras" id="imagen">
+    <p>Para iniciar tu entrenamiento, da clic en la Pokebola</p>
 
-    <p>Para iniciar a jugar debes diligenciar indicar el nombre de los jugadores</p>
+    <a class="start" href="register.html"><img src="Assets/img/Poké_Ball_icon.svg.png" alt="imagen de piedra papel o tijeras" id="imagen">
+    </a>
+
+    
+    <p>Hola entrenador!</p>
+    <p>Por favor identificate:</p>
+    <input type="text" class="nombre" placeholder="Nombre del entrenador">
+    <br><br>
+        <p>aquí podrás tener batallas pokemon con otro entrenador.
+    <br>Para iniciar, debes seleccionar tu equipo de pokemones </p>
     <br>
     <div class="input">
         <input type="text" class="jugador-1" placeholder="Nombre del jugador 1">
